# market-sim

./: DESIGN.md  PROJECT-STATUS.md  README.md  pyproject.toml
.rmr/: phase1-prompt.md  phase2-prompt.md  phase3-prompt.md  phase4-prompt.md
api/: __init__.py  main.py  routes.py  schemas.py
dashboard/: app.py  utils.py
dashboard/pages/: 1_Analysis.py  2_Scenarios.py  3_Stability.py  4_Demographics.py  5_About.py
data/properties/: sample_victoria.json  sample_victoria_200.json
docs/: API.md  ARCHITECTURE.md  CALIBRATION.md  METHODOLOGY.md
market_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: cli.py  generate_sample_data.py  run_smoke_test.py
sim/: __init__.py
sim/agents/: __init__.py  financial.py  generator.py  models.py  preferences.py  strategy.py
sim/analysis/: __init__.py  assessment_gap.py  comparative.py  neighbourhood.py  report.py  stability.py
sim/engine/: __init__.py  auction.py  context.py  matching.py  simulation.py
sim/market/: __init__.py  clock.py  inventory.py  shocks.py
sim/properties/: __init__.py  loader.py  models.py
sim/scenarios/: __init__.py  presets.py
tests/: __init__.py  test_clock.py  test_financial.py  test_generator.py  test_inventory.py  test_models.py  test_phase2.py  test_phase3.py  test_phase4.py
